<resources>

    <string name="app_name">tripool</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="start">시작하기</string>
    <string name="intro_help1">여행 목적지까지\n이제 힘들게 찾아가지 마세요.</string>
    <string name="intro_help2">목적지가 같은 사람들과\n빠르고 합리적인 가격으로</string>
    <string name="intro_help3">편하게 이동하세요.\ntripool은 여행의 시작입니다.</string>
    <string name="access_permission">접근 권한 동의</string>
    <string name="access_permission_help">다음 접근 권한을 허용해주세요.</string>
    <string name="agree">동의</string>
    <string name="camera">카메라</string>
    <string name="camera_permission_help">사진/동영상 촬영을 하려면 카메라 접근 권한이 필요합니다.</string>
    <string name="storage">저장공간</string>
    <string name="storage_permission_help">내 기기에서 사진, 동영상 및 파일을 저장하고 업로드를 하기 위해서 저장공간 접근 권한이 필요합니다.</string>
    <string name="location">위치</string>
    <string name="location_permission_help">내 위치를 찾기 위해 위치 접근 권한이 필요합니다.</string>
    <string name="call">전화</string>
    <string name="call_permission_help">예약된 기사님에게 전화하기 위해 위치 접근 권한이 필요합니다.</string>
    <string name="login">로그인</string>
    <string name="email">이메일 주소</string>
    <string name="password">비밀번호</string>
    <string name="plz_enter_id">ID를 입력하여 주십시오.</string>
    <string name="plz_enter_pw">비밀번호를 입력하여 주십시오.</string>
    <string name="login_failed">로그인 실패, 다시 시도해 주십시오.</string>
    <string name="id_pw_no_space">ID 혹은 비밀번호가 공백이면 안됩니다.</string>
    <string name="id_pw_wrong">ID 혹은 비밀번호가 틀립니다. 비밀번호는 대소문자를 구분합니다.</string>
    <string name="join_do">20초 안에 회원가입하기</string>
    <string name="join">회원가입</string>
    <string name="join_check">비밀번호 확인</string>
    <string name="join_do_now">가입하기</string>
    <string name="id_not_match_regex">ID가 email 형식이 아닙니다. 다시 입력해주십시오.</string>
    <string name="pw_not_match_regex">비밀번호에 영문, 숫자, 특수문자가 포함되는지 또는 8~11자가 맞는지 확인해주십시오.</string>
    <string name="pw_not_match">비밀번호가 일치하지 않습니다.</string>
    <string name="plz_check_privacy">개인정보 수집에 동의하여 주십시오.</string>
    <string name="join_success">회원가입이 완료되었습니다.</string>
    <string name="join_failed">회원 가입 오류, 다시 시도해 주십시오.</string>
    <string name="exist_id">같은 ID가 존재합니다.</string>
    <string name="search">검색하기</string>
    <string name="setting_departure">출발지 설정</string>
    <string name="setting_destination">도착지 설정</string>
    <string name="plz_select_departure">출발지를 선택해주세요.</string>
    <string name="plz_select_destination">도착지를 선택해주세요.</string>
    <string name="region">지역명</string>
    <string name="boarding_place">탑승지</string>
    <string name="alight_place">하차지</string>
    <string name="enter">입력</string>
    <string name="cancel">취소</string>
    <string name="which_region">어느 지역인가요?</string>
    <string name="which_place">장소가 어디인가요?</string>
    <string name="plz_select_region">지역명을 선택해주세요.</string>
    <string name="plz_select_boarding_place">탑승지를 선택해주세요.</string>
    <string name="plz_select_alight_place">하차지를 선택해주세요.</string>
    <string name="do_logout">로그아웃 됩니다.</string>
    <string name="exit_confirm">\'뒤로\'버튼을 한 번 더 누르시면 종료됩니다.</string>
    <string name="number_people_setting">인원수 설정</string>
    <string name="number_carrier_setting">캐리어수 설정</string>
    <string name="ok">확인</string>
    <string name="plz_enter_people_number">인원수를 입력해주세요.</string>
    <string name="plz_enter_carrier_number">캐리어수를 입력해주세요.</string>
    <string name="departure">출발</string>
    <string name="destination">도착</string>
    <string name="departure_time">출발시간</string>
    <string name="make_room">방만들기</string>
    <string name="reservation_do">예약하기</string>
    <string name="departure_date">출발일시</string>
    <string name="together_ride_people">동승인원</string>
    <string name="kind_of_car">차량종류</string>
    <string name="distance">이동 거리 :</string>
    <string name="people">인원 :</string>
    <string name="fare">전체 요금 :</string>
    <string name="fee">수수료 :</string>
    <string name="discount">할인 :</string>
    <string name="discount_amount">할인 금액 :</string>
    <string name="total_pay_amount">총 결제 금액 :</string>
    <string name="pay_do">결제하기</string>
    <string name="alert">알림</string>
    <string name="cannot_pay_help">죄송합니다 :(\n테스트 기간에는 현장결제만 가능합니다.</string>
    <string name="test_period">테스트 기간</string>
    <string name="pay_cancel">결제 취소</string>
    <string name="next">다음</string>
    <string name="car_schedule_ing">배차 중입니다 :)\n 배차가 완료되면 연락드리겠습니다.</string>
    <string name="car_schedule_finish">배차가 완료되었습니다.</string>
    <string name="check_reservation_detail">예약 내역 확인하기</string>
    <string name="check_reservation">예약 확인</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="my_info">내 정보</string>
    <string name="logout">로그아웃</string>
    <string name="boarding_location">탑승위치 :</string>
    <string name="reservation_no">예약번호 :</string>
    <string name="car_no">차량번호 :</string>
    <string name="together_ride_people2">동승인원 :</string>
    <string name="contact_driver">기사님 연락하기</string>
    <string name="ask">문의하기</string>
    <string name="not_pay_reservation_confirm">결제를 하지 않으면 예약이 되지 않습니다. 예약을 종료하시겠습니까?</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="plz_accept_permission">권한사용을 동의해주셔야 이용이 가능합니다.</string>
    <string name="cellphone">핸드폰</string>
    <string name="sex">성별</string>
    <string name="men">남</string>
    <string name="woman">여</string>
    <string name="privacy">개인정보 수집</string>
    <string name="privacy_help">개인정보는 \'차랑 배차를 위한 본인 확인\', \'더 나은 서비스를 위한 이용자의 서비스 이용에 대한 통계\' 외에 다른곳에는 사용하지 않습니다.</string>
    <string name="privacy_agree">개인정보 수집 동의</string>
    <string name="password_help">* 영문, 숫자, 특수문자 포함 8~11자리</string>
    <string name="exist_room">같은 시간대에 만드신 방이 있습니다.</string>
    <string name="make_room_failed">방 만들기 실패. 다시 시도해주세요.</string>
    <string name="history">이용 내역</string>
    <string name="evaluation">평가하기</string>
    <string name="driver_evaluation">기사님 평가하기</string>
    <string name="driver_evaluation_complete">기사님 평가 완료</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="default_notification_channel_name">default_notification_channel_name</string>
    <string name="notice">공지 사항</string>
    <string name="notice_date">공지 날짜</string>
    <string name="notice_title">공지명</string>
    <string name="notice_read">읽음</string>

</resources>
