<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ToolBar" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/access_permission"
            android:layout_gravity="center"
            style="@style/ToolBarTitleText"/>

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#c1c1c1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:gravity="center"
        android:text="@string/access_permission_help"
        android:textSize="15sp"
        android:textColor="#555" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#c1c1c1" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_accept"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#117869"
        android:text="@string/agree"
        android:textColor="#ffffff" />

</LinearLayout>