<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99000000"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:padding="20dp"
        android:background="#fff"
        android:orientation="vertical">

        <EditText
            android:id="@+id/peopleInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="15dp"
            android:hint="@string/number_people_setting"
            android:inputType="number"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/carrierInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="15dp"
            android:hint="@string/number_carrier_setting"
            android:inputType="number"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/dialogOkBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="#117869"
            android:onClick="btnLogin"
            android:text="@string/ok"
            android:textColor="#ffffff" />

    </LinearLayout>

</LinearLayout>