<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ToolBar" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_reservation"
            android:layout_gravity="center"
            style="@style/ToolBarTitleText"/>

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#c1c1c1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reservationDateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="#1aaa95"
            android:gravity="center"
            android:text="2018.8.3 (금) 09:00"
            android:textColor="#fff"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/readyboard_border"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">
                
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    
                    <TextView
                        android:id="@+id/reservationDeptText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="순천"
                        android:textSize="25sp"/>

                    <TextView
                        android:id="@+id/reservationDeptTimeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9:30"
                        android:textSize="18sp"/>
                    
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="->"
                    android:textSize="22sp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/reservationDestText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="낙안읍성"
                        android:textSize="25sp"/>

                    <TextView
                        android:id="@+id/reservationDestTimeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10:30"
                        android:textSize="18sp"/>

                </LinearLayout>
                
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boarding_location"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/locationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="000000"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reservation_no"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/reservationNoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="TTKK1S1S21"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_no"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/carNoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="01가 1234"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/together_ride_people2"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/peopleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="6명"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/contactBtn"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:background="#117869"
                    android:text="@string/contact_driver"
                    android:textColor="#ffffff"/>

                <Button
                    android:id="@+id/askBtn"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:background="#117869"
                    android:text="@string/ask"
                    android:textColor="#ffffff"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>