<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ToolBar" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:src="@drawable/app_bar"/>

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#c1c1c1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="#1aaa95"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/departureText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="순천역"
            android:textSize="16sp"
            android:textColor="#fff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="->"
            android:textSize="15sp"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/destinationText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="낙안읍성"
            android:textSize="16sp"
            android:textColor="#fff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="#eee"
        android:orientation="vertical">

        <TextView
            android:id="@+id/deptDateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:text="2018년 8월 2일 (목)"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/users"/>

            <TextView
                android:id="@+id/peopleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="10명"
                android:textSize="14sp"/>

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/bag"/>

            <TextView
                android:id="@+id/luggageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3개"
                android:textSize="14sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ddd"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/departure"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/destination"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/departure_time"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ready"
            android:textSize="14sp"/>

    </LinearLayout>

    <ListView
        android:id="@+id/search_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#fff"
        android:divider="#999999"
        android:dividerHeight="1dp"/>

    <Button
        android:id="@+id/btn_make_room"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#117869"
        android:text="@string/make_room"
        android:textColor="#ffffff" />

</LinearLayout>